ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Trivial - P5
    • 2.1.2
    • Affects Version/s: 2.1.0
    • Component/s: Shell
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Instead of removing only db.auth() lines from the history, any command containing ".auth" is removed. This is annoying because ".auth" is used fairly often, e.g., db.authors.find() or db.issue.find(

      {"comment.author": "bill"}

      )

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Daniel Pasette (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: