SERVER-5616 Any shell command containing the string ".auth" is not added to shell history

In the case where items such as `db.author` are used, these would
normally be omitted--which isn't what's needed.  Furthermore, items like
`db.auth   ()` are also permitted, and should not be displayed.  This
replaces the existing `strstr` check with a regular expression using
PCRE.